# validator

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: rust.yml
benches/: validation.rs
derive/: Cargo.toml
derive/src/: access.rs  crate_path.rs  generate.rs  ident.rs  lib.rs  model.rs  parse.rs  types.rs  utility.rs  validate.rs
docs/: architecture.md  architecture.zh-CN.md  default-rules-coverage.md  development.md  development.zh-CN.md  errors.md  errors.zh-CN.md  extensions.md  extensions.zh-CN.md  guide.md  guide.zh-CN.md  i18n-design.md  i18n.md  i18n.zh-CN.md  release-checklist.md  rules.md  rules.zh-CN.md  schema.md  schema.zh-CN.md  validator-roadmap.md
examples/: basic.rs  collections.rs  custom_rule.rs  custom_value.rs  i18n.rs  schema.rs  selective.rs  struct_check.rs  v1.rs  value.rs
src/: core.rs  engine.rs  i18n.rs  lib.rs  rules.rs  schema.rs  target.rs  traits.rs  valid.rs
src/core/: access.rs  args.rs  cache.rs  context.rs  error.rs  field.rs  group.rs  namespace.rs  params.rs  raw_params.rs  registry.rs  selection.rs  signature.rs  spec.rs  value.rs
src/core/group/: compile.rs  execute.rs  model.rs  validate.rs
src/core/spec/: parser.rs  tests.rs
src/core/value/: collection.rs  json.rs  network.rs  primitive.rs
src/engine/: cache.rs  derive.rs  derive_api.rs
src/i18n/: catalog.rs  en.rs  locale.rs  template.rs  translator.rs  zh_cn.rs
src/rules/: alias.rs  choice.rs  collection.rs  compare.rs  field.rs  format.rs  network.rs  required.rs  size.rs  string.rs
src/rules/choice/: noneof.rs  noneofci.rs  oneof.rs  oneofci.rs
src/rules/collection/: unique.rs
src/rules/compare/: eq.rs  eq_ignore_case.rs  gt.rs  gte.rs  lt.rs  lte.rs  ne.rs  ne_ignore_case.rs
src/rules/field/: condition.rs  (+1 more)
src/schema/: access.rs  compile.rs  items.rs  parser.rs  path.rs  tests.rs  validate.rs  value.rs
tests/: architecture.rs  compile.rs  core.rs  field_paths.rs  i18n.rs  rules.rs  selective.rs
tests/core/: derive.rs  direct.rs  time.rs
tests/rules/: choice.rs  color.rs  compare.rs  extended_format.rs  format.rs  network.rs  network_common.rs  omitempty.rs  size_compare.rs  string.rs  unique.rs
tests/ui/: collection_rules.rs  dive_nested.rs  field_path_conditional.rs  field_path_conditional.stderr  field_path_invalid_syntax.rs  field_path_invalid_syntax.stderr  field_path_private.rs  field_path_private.stderr  field_path_unknown_first.rs  field_path_unknown_first.stderr  field_path_unknown_nested.rs  field_path_unknown_nested.stderr  manual_selective.rs  manual_selective.stderr  unique_field_invalid_container.rs  unique_field_invalid_container.stderr  unique_field_missing.rs  unique_field_missing.stderr  unique_field_path.rs  unique_field_path.stderr  unique_field_syntax.rs  unique_field_syntax.stderr  unique_fields_duplicate.rs  unique_fields_duplicate.stderr  unique_fields_empty.rs  unique_fields_empty.stderr  unique_fields_invalid_path.rs  unique_fields_invalid_path.stderr  unique_fields_private.rs  unique_fields_private.stderr
(+84 files in other folders)
