[package]
name = "validator"
version = "0.1.0"
edition = "2024"
description = "Rust 2024 validation library with derive macros, schema validation, and i18n messages."
license = "MIT OR Apache-2.0"
repository = "https://github.com/halo-space/validator"
readme = "README.md"
rust-version = "1.96.1"
keywords = ["validation", "validator", "derive", "schema", "i18n"]
categories = ["data-structures", "parsing"]

[dependencies]
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
validator-derive = { version = "0.1.0", path = "derive" }
