[package]
name = "validator"
version = "0.1.0"
edition = "2024"
description = "Rust 2024 validation library with derive macros, schema validation, and i18n messages."
license = "MIT OR Apache-2.0"
repository = "https://github.com/halo-space/validator"
readme = "README.md"
rust-version = "1.97"
publish = false
keywords = ["validation", "validator", "derive", "schema", "i18n"]
categories = ["data-structures", "parsing"]

[dependencies]
http = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
unicode-ident = "1"
url = "2"
validator-derive = { version = "0.1.0", path = "derive" }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
trybuild = "1"

[[bench]]
name = "validation"
harness = false
